--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prod": "brunch build --production"
   },
   "dependencies": {
+    "es6-promise": "^3.2.1",
     "react": "15.1.0",
     "react-dom": "15.1.0"
   },
