--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "es6-promise": "^3.2.1",
     "react": "15.1.0",
-    "react-dom": "15.1.0"
+    "react-dom": "15.1.0",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "auto-reload-brunch": "^2.0.0",
