Add blur filters

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "es6-promise": "^3.2.1",
     "react": "15.1.0",
     "react-dom": "15.1.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "stackblur-canvas": "^1.2.1"
   },
   "devDependencies": {
     "auto-reload-brunch": "^2.0.0",
