--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "auto-reload-brunch": "^2.0.0",
+    "autoprefixer": "^6.3.6",
     "babel-brunch": "~6.0.0",
     "babel-preset-es2015": "~6.3.13",
     "babel-preset-react": "~6.3.13",
@@ -27,6 +28,7 @@
     "clean-css-brunch": "^2.0.0",
     "css-brunch": "^2.0.0",
     "javascript-brunch": "^2.0.0",
+    "postcss-brunch": "^0.5.0",
     "sass-brunch": "^2.6.3",
     "uglify-js-brunch": "^2.0.0"
   }
