--- a/package.json
+++ b/package.json
@@ -22,14 +22,26 @@
     "auto-reload-brunch": "^2.0.0",
     "autoprefixer": "^6.3.6",
     "babel-brunch": "~6.0.0",
-    "babel-preset-es2015": "~6.3.13",
-    "babel-preset-react": "~6.3.13",
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "brunch": "^2.4.0",
     "clean-css-brunch": "^2.0.0",
     "css-brunch": "^2.0.0",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.19.0",
     "javascript-brunch": "^2.0.0",
+    "node-sass": "^3.7.0",
     "postcss-brunch": "^0.5.0",
+    "postcss-loader": "^0.9.1",
     "sass-brunch": "^2.6.3",
-    "uglify-js-brunch": "^2.0.0"
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "uglify-js-brunch": "^2.0.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-validator": "^2.1.2"
   }
 }
