--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "es6-promise": "^3.2.1",
     "react": "15.1.0",
     "react-dom": "15.1.0",
-    "redux-thunk": "^2.1.0",
+    "redux-saga": "^0.11.0",
+    "babel-polyfill": "^6.9.1",
     "stackblur-canvas": "^1.2.1"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "babel-plugin-syntax-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.5.0",
     "brunch": "^2.4.0",
     "clean-css-brunch": "^2.0.0",
     "css-brunch": "^2.0.0",
